robotic-codes/src/test/test_ror.txt
test_ror.cpp: In function ‘int main()’:
test_ror.cpp:16:7: error: ‘ror’ was not declared in this scope
   l = ror(num,k);
       ^~~
